Объеденил пакеты Helpers и Widgets так как они все неразрывно связаны с круд. Это последний коммит версии 1.0 дальше будет версия 1.1 она будет несовместима с версией 1.0 Дальнейший вектор развития - уход от монолитных компонент в сторону виджетов.

--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
   "minimum-stability": "dev",
   "require": {
     "yiisoft/yii2-bootstrap": "@dev",
-    "kozlovsv/yii2-helpers": "*",
-    "kozlovsv/yii2-widgets": "*"
+    "kozlovsv/yii2-widget-datetimepicker": "*",
+    "kartik-v/yii2-widget-select2": "*"
   },
   "autoload": {
     "psr-4": {
