Все кнопки создаются при помощи виджета кнопок. ToolBarPanel. Кнопки по умолчанию перенесены в хелпер. Удален функционал построителяформ перешли на построитель форм kartik-v

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   "require": {
     "yiisoft/yii2-bootstrap": "@dev",
     "kozlovsv/yii2-widget-datetimepicker": "*",
-    "kartik-v/yii2-widget-select2": "*"
+    "kartik-v/yii2-widget-select2": "*",
+    "kartik-v/yii2-builder": "*"
   },
   "autoload": {
     "psr-4": {
