--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
     "yiisoft/yii2-bootstrap": "@dev",
     "kozlovsv/yii2-widget-datetimepicker": "*",
     "kartik-v/yii2-widget-select2": "*",
-    "kartik-v/yii2-builder": "*"
+    "kartik-v/yii2-builder": "*",
+    "kartik-v/yii2-icons": "@dev",
+    "bower-asset/pnotify": "*"
   },
   "autoload": {
     "psr-4": {
