--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "yiisoft/yii2-bootstrap": "@dev",
     "kozlovsv/yii2-widget-datetimepicker": "*",
-    "kartik-v/yii2-widget-select2": "*",
+    "kartik-v/yii2-widget-select2": "2.1.7",
     "kartik-v/yii2-builder": "*"
   },
   "autoload": {
